[package]
name = "stark-primitives"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-io = { version = "2.0.0", default-features = false }
distaff = { git = "https://github.com/GuildOfWeavers/distaff.git", optional = true }
sp-runtime-interface = { version = "2.0.0", default-features = false }
bincode = { version = "1.3.1", optional = true }


[features]
default = ["std"]
std = [
	"codec/std",
	"sp-io/std",
	"distaff",
	"sp-runtime-interface/std",
	"bincode"
]